# rust-key-value-storage

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: main.rs
client/src/utils/: input.rs
server/: Cargo.toml  logger.yaml
server/src/: key_value_store.rs  main.rs
server/src/server/: data.rs  internal.rs  mod.rs  servers_table.rs
src/: main.rs  server.rs
