[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.12.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1.0.82"
futures = "0.3.30"
log = "0.4.25"
log4rs = "1.3.0"

